[workspace]
members = [
    "voxel-engine-cpu",
    "voxel-engine-gpu",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

[profile.dev]
opt-level = 1