[workspace]
members = [
    "voxel-engine-app",
    "voxel-engine-shader",
    "voxel-engine-parser",
]

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3

#[profile.dev]
#opt-level = 1