[package]
name = "voxel-engine-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { version = "0.6.0" }
glam = { version = "0.22", default-features = false, features = ["libm", "bytemuck"] }
bytemuck = { version = "1.5", default-features = false, features = ["derive"] }