[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glfw = { version = "0.51.0", features = ["wayland"] }
gl = { package = "voxel-engine-gl", path = "../voxel-engine-gl" }
voxel-engine-shader = { path = "../voxel-engine-shader" }

[build-dependencies]
spirv-builder = "0.5.0"
